--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
               <span id="phone-number">+54 9 351-3982405</span></strong
             >
           </p>
-          <p id="presiona"><strong>Presiona el Numero para agendar</strong></p>
+          <p id="presiona"><strong>Presiona el Numero para copiarlo</strong></p>
           <p>
             <strong>Dirección de la Parroquia:</strong> Agua de la Pilona 8043 <br>
             Barrio 9 de Julio, Cordoba
