--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="#galeria">Galeria</a></li>
             <li><a href="#otras-iglesias">Iglesias de la congregacion</a></li>
             <li><a href="#sitios">Conoce nuestros Sitios</a></li>
-            <li><a href="#contacto">Contactos</a></li>
+            <li><a href="#contacto">Contactos y Ubicacion</a></li>
           </ul>
         </div>
       </nav>
