--- a/index.html
+++ b/index.html
@@ -100,39 +100,39 @@
         <!-- Card 1 -->
         <div class="card">
           <div class="card-date">
-            <span class="date-day">07</span>
+            <span class="date-day">22</span>
             <span class="date-month">Dic</span>
           </div>
           <div class="card-content">
-            <h3 class="card-title">Viaje a Dean Funes</h3>
+            <h3 class="card-title">Pecebre Viviente 19:30HS</h3>
             <p class="card-description">
-              Viajaremos a Dean Funes a ayudar a los mas Necesitados.
+              Te invitamos a participar del nacimiento de Jesus, hecho por los chicos de catequesis.
             </p>
           </div>
         </div>
         <!-- Card 2 -->
         <div class="card">
           <div class="card-date">
-            <span class="date-day">08</span>
+            <span class="date-day">24</span>
             <span class="date-month">Dic</span>
           </div>
           <div class="card-content">
-            <h3 class="card-title">Inmaculada Concepcion</h3>
+            <h3 class="card-title">Misa de Navidad 19:30HS</h3>
             <p class="card-description">
-              Festejamos el dia de la Virgen Maria.
+              Te invitamos a celebrar la Misa en memoria del nacimiento de nuestro Señor Jesucristo.
             </p>
           </div>
         </div>
         <!-- Card 3 -->
         <div class="card">
           <div class="card-date">
-            <span class="date-day">24</span>
+            <span class="date-day">28</span>
             <span class="date-month">Dic</span>
           </div>
           <div class="card-content">
-            <h3 class="card-title">Navidad</h3>
+            <h3 class="card-title">Fin de Año 19:00HS</h3>
             <p class="card-description">
-              Celebramos el nacimiento de nuestro Señor Jesucristo.
+              Te invitamos a participar de la ultima Misa para despedir el Año.
             </p>
           </div>
         </div>
