--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <span class="date-month">Dic</span>
           </div>
           <div class="card-content">
-            <h3 class="card-title">Pecebre Viviente 19:30HS</h3>
+            <h3 class="card-title">Pesebre Viviente 19:30HS</h3>
             <p class="card-description">
               Te invitamos a participar del nacimiento de Jesus, hecho por los chicos de catequesis.
             </p>
