--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <div class="card-content">
             <h3 class="card-title">Pesebre Viviente 19:30HS</h3>
             <p class="card-description">
-              Te invitamos a participar del nacimiento de Jesus, hecho por los chicos de catequesis.
+              Te invitamos a participar del nacimiento de Jesus, en un pesebre viviente.
             </p>
           </div>
         </div>
