--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="header-content">
         <div class="logo">
           <h1 id="titulo">Iglesia Maria Medianera de Todas las Gracias</h1>
-          <h2 id="padre">Sacerdote Padre Alfredo Gonzalez</h2>
+          <h2 id="padre">Padre Alfredo Gonzalez</h2>
           <img
             src="imagenes/logo-iglesia.webp"
             alt="Icono de la iglesia"
@@ -75,7 +75,7 @@
           </tr>
           <tr>
             <td>Sabados</td>
-            <td>Adoracion 18hs, Santa Misa 19hs</td>
+            <td>Adoracion 19hs, Santa Misa 20hs</td>
             <td>Iglesia Maria Medianera</td>
           </tr>
           <tr>
@@ -100,39 +100,52 @@
         <!-- Card 1 -->
         <div class="card">
           <div class="card-date">
-            <span class="date-day">22</span>
-            <span class="date-month">Dic</span>
+            <span class="date-day">05</span>
+            <span class="date-month">Mar</span>
           </div>
           <div class="card-content">
-            <h3 class="card-title">Pesebre Viviente 19:30HS</h3>
+            <h3 class="card-title">Miercoles de Cenizas</h3>
             <p class="card-description">
-              Te invitamos a participar del nacimiento de Jesus, en un pesebre viviente.
+              Te invitamos a participar de la misa para prepararnos a la Pasion, Muerte y Resurrecion de Jesucristo. ¡Del polvo eres y al polvo volveras!
             </p>
           </div>
         </div>
         <!-- Card 2 -->
         <div class="card">
           <div class="card-date">
-            <span class="date-day">24</span>
-            <span class="date-month">Dic</span>
+            <span class="date-day">08</span>
+            <span class="date-month">Mar</span>
           </div>
           <div class="card-content">
-            <h3 class="card-title">Misa de Navidad 19:30HS</h3>
+            <h3 class="card-title">Inicio de Catequesis</h3>
             <p class="card-description">
-              Te invitamos a celebrar la Misa en memoria del nacimiento de nuestro Señor Jesucristo.
+              Empiezan las clases de Catequesis para la primera Comunion en Junio.
             </p>
           </div>
         </div>
         <!-- Card 3 -->
         <div class="card">
           <div class="card-date">
-            <span class="date-day">28</span>
-            <span class="date-month">Dic</span>
+            <span class="date-day">09</span>
+            <span class="date-month">Mar</span>
           </div>
           <div class="card-content">
-            <h3 class="card-title">Fin de Año 19:00HS</h3>
+            <h3 class="card-title">Viajamos a Villa Maria de Rio Seco</h3>
             <p class="card-description">
-              Te invitamos a participar de la ultima Misa para despedir el Año.
+              Ayudemos a que los niños puedad comenzar las clases con los elementos necesarios. Estaremos llevando las donaciones. Dios bendice al dador alegre.
+            </p>
+          </div>
+        </div>
+          <!-- Card 4 -->
+        <div class="card">
+          <div class="card-date">
+            <span class="date-day">--</span>
+            <span class="date-month">Jun</span>
+          </div>
+          <div class="card-content">
+            <h3 class="card-title">Inscripciones para Catequesis</h3>
+            <p class="card-description">
+              Fecha a designar para la inscripcion en Junio
             </p>
           </div>
         </div>
