--- a/index.html
+++ b/index.html
@@ -100,43 +100,34 @@
         <!-- Card 1 -->
         <div class="card">
           <div class="card-date">
-            <span class="date-day">05</span>
+            <span class="date-day">18</span>
             <span class="date-month">Mar</span>
           </div>
           <div class="card-content">
-            <h3 class="card-title">Miercoles de Cenizas</h3>
+            <h3 class="card-title">Inscripciones para Confirmacion</h3>
             <p class="card-description">
-              Te invitamos a participar de la misa para prepararnos a la Pasion, Muerte y Resurrecion de Jesucristo. ¡Del polvo eres y al polvo volveras!
+              Sabados de 15:00hs a 17:00hs. Niños de 11 a 15 años (Cursan un año)
+              Mayores de 16 años (Toman 4 clases)
+              Catequista Aurora Cel: 3513899290
             </p>
           </div>
         </div>
         <!-- Card 2 -->
         <div class="card">
           <div class="card-date">
-            <span class="date-day">08</span>
+            <span class="date-day">05</span>
             <span class="date-month">Mar</span>
+            <span class="date-day">17</span>
+            <span class="date-month">Abr</span>
           </div>
           <div class="card-content">
-            <h3 class="card-title">Inicio de Catequesis</h3>
+            <h3 class="card-title">Tiempo de Cuaresma</h3>
             <p class="card-description">
-              Empiezan las clases de Catequesis para la primera Comunion en Junio.
+              Te Invitamos a esta Cuaresma donde recordamos los 40 dias que Jesus anduvo en el desierto. Mira nuestro horarios de Misa y participa.
             </p>
           </div>
         </div>
         <!-- Card 3 -->
-        <div class="card">
-          <div class="card-date">
-            <span class="date-day">09</span>
-            <span class="date-month">Mar</span>
-          </div>
-          <div class="card-content">
-            <h3 class="card-title">Viajamos a Villa Maria de Rio Seco</h3>
-            <p class="card-description">
-              Ayudemos a que los niños puedad comenzar las clases con los elementos necesarios. Estaremos llevando las donaciones. Dios bendice al dador alegre.
-            </p>
-          </div>
-        </div>
-          <!-- Card 4 -->
         <div class="card">
           <div class="card-date">
             <span class="date-day">--</span>
