--- a/index.html
+++ b/index.html
@@ -290,6 +290,45 @@
         </video>
       </div>
     </section>
+    <section id="galeria" class="gallery">
+      <div class="section-header">
+        <h2>Mision Cruz del Eje</h2>
+      </div>
+      <div class="gallery-grid">
+        <img
+          src="imagenes/img25.png.jpeg"
+          alt="Descripción 1"
+          class="gallery-item"
+        />
+        <img
+          src="imagenes/img26.png.jpeg"
+          alt="Descripción 2"
+          class="gallery-item"
+        />
+        <img
+          src="imagenes/img27.png.jpeg"
+          alt="Descripción 3"
+          class="gallery-item"
+        />
+        <img
+          src="imagenes/img28.png.jpeg"
+          alt="Descripción 4"
+          class="gallery-item"
+        />
+        <img
+          src="imagenes/img29.png.jpeg"
+          alt="Descripción 5"
+          class="gallery-item"
+        />
+        <img
+          src="imagenes/img30.png.jpeg"
+          alt="Descripción 6"
+          class="gallery-item"
+        />
+       
+      </div>
+     </div>
+    </section>
     <section id="otras-iglesias" class="church-locations">
       <div class="section-header">
         <h2>Iglesias de la Congregacion</h2>
