--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
           <div class="card-content">
             <h3 class="card-title">Inscripciones para Confirmacion</h3>
             <p class="card-description">
-              Sabados de 15:00hs a 17:00hs. Niños de 11 a 15 años (Cursan un año)
-              Mayores de 16 años (Toman 4 clases)
+              Sabados de 15:00hs a 17:00hs.</br> Niños de 11 a 15 años (Cursan un año)</br>
+              Mayores de 16 años (Toman 4 clases)</br></br>
               Catequista Aurora Cel: 3513899290
             </p>
           </div>
