--- a/index.html
+++ b/index.html
@@ -108,7 +108,10 @@
             <p class="card-description">
               Sabados de 15:00hs a 17:00hs.</br> Niños de 11 a 15 años (Cursan un año)</br>
               Mayores de 16 años (Toman 4 clases)</br></br>
-              Catequista Aurora Cel: 3513899290
+              <strong
+              >Catequista Aurora:
+             <span id="phone-number">3513899290</span></strong
+            > 
             </p>
           </div>
         </div>
