--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
       </div>
       <div class="links-container">
         <a
-          href="https://www.radioespiritusanto.com.ar/"
+          href="https://radioarg.com/espiritu-santo/"
           target="_blank"
           class="link-item"
         >
