--- a/index.html
+++ b/index.html
@@ -328,7 +328,48 @@
           alt="Descripción 6"
           class="gallery-item"
         />
-       
+        <div class="video-container">
+        <video class="styled-video" controls>
+          <source src="imagenes/video3.mp4" type="video/mp4" />
+          Tu navegador no soporta la etiqueta de video.
+        </video>
+      </div>
+        <div class="video-container">
+        <video class="styled-video" controls>
+          <source src="imagenes/video4.mp4" type="video/mp4" />
+          Tu navegador no soporta la etiqueta de video.
+        </video>
+      </div>
+        <div class="video-container">
+        <video class="styled-video" controls>
+          <source src="imagenes/video5.mp4" type="video/mp4" />
+          Tu navegador no soporta la etiqueta de video.
+        </video>
+      </div>
+        <div class="video-container">
+        <video class="styled-video" controls>
+          <source src="imagenes/video6.mp4" type="video/mp4" />
+          Tu navegador no soporta la etiqueta de video.
+        </video>
+      </div>
+        <div class="video-container">
+        <video class="styled-video" controls>
+          <source src="imagenes/video7.mp4" type="video/mp4" />
+          Tu navegador no soporta la etiqueta de video.
+        </video>
+      </div>
+        <div class="video-container">
+        <video class="styled-video" controls>
+          <source src="imagenes/video8.mp4" type="video/mp4" />
+          Tu navegador no soporta la etiqueta de video.
+        </video>
+      </div>
+        <div class="video-container">
+        <video class="styled-video" controls>
+          <source src="imagenes/video9.mp4" type="video/mp4" />
+          Tu navegador no soporta la etiqueta de video.
+        </video>
+      </div>
       </div>
      </div>
     </section>
