Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -118,15 +118,18 @@
         <!-- Card 2 -->
         <div class="card">
           <div class="card-date">
-            <span class="date-day">05</span>
-            <span class="date-month">Mar</span>
-            <span class="date-day">17</span>
+            <span class="date-day">14</span>
+            <span class="date-month">Abr</span>
+            <span class="date-day">20</span>
             <span class="date-month">Abr</span>
           </div>
           <div class="card-content">
-            <h3 class="card-title">Tiempo de Cuaresma</h3>
+            <h3 class="card-title">Semana Santa</h3>
             <p class="card-description">
-              Te Invitamos a esta Cuaresma donde recordamos los 40 dias que Jesus anduvo en el desierto. Mira nuestro horarios de Misa y participa.
+           Miércoles 16/04 Via Crucis, Misa en favor de los fieles difuntos  <br/><br/>
+         Viernes 17/04 10hs salimos de la pquia para participar en el Viaje Crucis-Cristo Ñu Pora(Rio Ceballos) <br/>
+19.30hs Rito de Comunión, Exaltación de la Santa Cruz y adoración al Santísimo en pquia María Medianera<br/><br/>
+Domingo 20/04 Pascua 10hs Santa Misa
             </p>
           </div>
         </div>
