Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -118,31 +118,28 @@
         <!-- Card 2 -->
         <div class="card">
           <div class="card-date">
-            <span class="date-day">14</span>
+            <span class="date-day">01</span>
             <span class="date-month">Abr</span>
-            <span class="date-day">20</span>
-            <span class="date-month">Abr</span>
+            
           </div>
           <div class="card-content">
-            <h3 class="card-title">Semana Santa</h3>
+            <h3 class="card-title">Inscripciones Comunión</h3>
             <p class="card-description">
-           Miércoles 16/04 Via Crucis, Misa en favor de los fieles difuntos  <br/><br/>
-         Viernes 17/04 10hs salimos de la pquia para participar en el Viaje Crucis-Cristo Ñu Pora(Rio Ceballos) <br/>
-19.30hs Rito de Comunión, Exaltación de la Santa Cruz y adoración al Santísimo en pquia María Medianera<br/><br/>
-Domingo 20/04 Pascua 10hs Santa Misa
+           Se abren las inscripciones para Comunión, todos los sábados de 15hs a 17hs<br/>
+<strong>Tel: Catequista Aurora <span id="phone-number">3513899290</span></strong>
             </p>
           </div>
         </div>
         <!-- Card 3 -->
         <div class="card">
           <div class="card-date">
-            <span class="date-day">--</span>
+            <span class="date-day">8</span>
             <span class="date-month">Jun</span>
           </div>
           <div class="card-content">
-            <h3 class="card-title">Inscripciones para Catequesis</h3>
+            <h3 class="card-title">Pentecostes</h3>
             <p class="card-description">
-              Fecha a designar para la inscripcion en Junio
+            Celebramos la llegada del Espíritu Santo.
             </p>
           </div>
         </div>
