Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -100,18 +100,13 @@
         <!-- Card 1 -->
         <div class="card">
           <div class="card-date">
-            <span class="date-day">18</span>
-            <span class="date-month">Mar</span>
+            <span class="date-day">2°</span>
+            <span class="date-month">Sábado de c/mes</span>
           </div>
           <div class="card-content">
-            <h3 class="card-title">Inscripciones para Confirmacion</h3>
+            <h3 class="card-title">Misa de los niños</h3>
             <p class="card-description">
-              Sabados de 15:00hs a 17:00hs.</br> Niños de 11 a 15 años (Cursan un año)</br>
-              Mayores de 16 años (Toman 4 clases)</br></br>
-              <strong
-              >Catequista Aurora:
-             <span id="phone-number">3513899290</span></strong
-            > 
+              Te invitamos a participar de la misa de los niños de comunión</br>17 hs</br></br>
             </p>
           </div>
         </div>
