Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -113,15 +113,14 @@
         <!-- Card 2 -->
         <div class="card">
           <div class="card-date">
-            <span class="date-day">01</span>
-            <span class="date-month">Abr</span>
+            <span class="date-day">2°</span>
+            <span class="date-month">Miércoles de c/mes</span>
             
           </div>
           <div class="card-content">
-            <h3 class="card-title">Inscripciones Comunión</h3>
+            <h3 class="card-title">Misa en favor de los difuntos</h3>
             <p class="card-description">
-           Se abren las inscripciones para Comunión, todos los sábados de 15hs a 17hs<br/>
-<strong>Tel: Catequista Aurora <span id="phone-number">3513899290</span></strong>
+         Unamonos en oración para encomendar a nuestros seres queridos al Señor de la Vida<br/>19.30 hs
             </p>
           </div>
         </div>
