Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
             
           </div>
           <div class="card-content">
-            <h3 class="card-title">Misa en favor de los difuntos</h3>
+            <h3 class="card-title">Misa en favor de los Difuntos</h3>
             <p class="card-description">
-         Unamonos en oración para encomendar a nuestros seres queridos al Señor de la Vida<br/>19.30 hs
+         Unámonos en oración para encomendar a nuestros seres queridos al Señor de la Vida<br/>19.30 hs
             </p>
           </div>
         </div>
