Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
         <!-- Card 3 -->
         <div class="card">
           <div class="card-date">
-            <span class="date-day">08</span>
-            <span class="date-month">Jun</span>
+            <span class="date-day">01</span>
+            <span class="date-month">Nov</span>
           </div>
           <div class="card-content">
-            <h3 class="card-title">Pentecostes</h3>
+            <h3 class="card-title">Misa de los Santos</h3>
             <p class="card-description">
-            Celebramos la llegada del Espíritu Santo.
+            Celebramos la misa en favor de los Santos. 19 hs
             </p>
           </div>
         </div>
