Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
         <!-- Card 3 -->
         <div class="card">
           <div class="card-date">
-            <span class="date-day">01</span>
+            <span class="date-day">09</span>
             <span class="date-month">Nov</span>
           </div>
           <div class="card-content">
-            <h3 class="card-title">Misa de los Santos</h3>
+            <h3 class="card-title">Fiesta Patronal María Medianera de todas las Gracias</h3>
             <p class="card-description">
-            Celebramos la misa en favor de los Santos. 19 hs
+            Acompañanos en la misa de la Iglesia y la visita de la Hostia Sangrante, adoración 17hs, Santa Misa 19hs
             </p>
           </div>
         </div>
